syntax = "proto3";
package imuachain.immint.v1;

import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "imuachain/immint/v1/params.proto";

option go_package = "github.com/imua-xyz/imuachain/x/immint/types";

// MsgUpdateParams is the Msg/UpdateParams request type for the parameters of
// this module..
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  // authority is the address of the account, which must sign this request.
  // typically, it is the address of the governance module.
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  // if a parameter is not supplied, the previously set value is used.
  Params params = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  // UpdateParams updates the parameters of the module.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse) {
    option (google.api.http).post = "/imuachain/immint/v1/tx/MsgUpdateParams";
  }
}
