syntax = "proto3";
package imuachain.oracle.v1;

import "gogoproto/gogo.proto";
import "imuachain/oracle/v1/price.proto";

option go_package = "github.com/imua-xyz/imuachain/x/oracle/types";

// prices of all rounds of a specific token
message Prices {
  // for which token these prices are
  uint64 token_id = 1 [(gogoproto.customname) = "TokenID"];
  // next round id of the price to be updated
  uint64 next_round_id = 2 [(gogoproto.customname) = "NextRoundID"];
  // price list of all history round prices for the token
  repeated PriceTimeRound price_list = 3;
}
